修改了两个bug

--- a/test.html
+++ b/test.html
@@ -7,13 +7,14 @@
     <title>test</title>
     <style>
         div{
-            width: 100px;
+            width: 200px;
             height: 100px;
-            background-color: aquamarine;
+            background-color: seagreen;
         }
     </style>
 </head>
 <body>
     <div></div>
+    <h2>xiugai</h2>
 </body>
 </html>
