--- a/shopcar.html
+++ b/shopcar.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        div{
-            width: 100px;
-            height: 100px;
-            background-color: pink;
-        }
-    </style>
+    <title>购物车页面</title>
 </head>
 <body>
-    <div>登录</div>
+    
 </body>
 </html>
